<resources>
    <string name="subtype_ja">Japanese</string>
    <string name="pref_skin_type_key">pref_skin_type_key</string>
    <string name="pref_software_keyboard_category_title">Software keyboard</string>
        <string name="pref_software_keyboard_advanced_settings_title">Software keyboard advanced settings</string>
    <string name="pref_fragment_software_keyboard_title">Software keyboard</string>
    <string name="pref_fragment_input_support_title">Input support</string>
    <string name="pref_fragment_conversion_title">Conversion</string>
    <string name="pref_fragment_dictionary_title">Dictionary</string>
    <string name="pref_fragment_user_feedback_title">User feedback</string>
    <string name="pref_fragment_about_title">About</string>
    <string name="pref_fragment_development_title">Development</string>
    <string name="pref_software_keyboard_preferences_portrait_title">Software keyboard preferences for portrait mode</string>
    <string name="pref_software_keyboard_preferences_landscape_title">Software keyboard preferences for landscape mode</string>
        <string name="pref_keyboard_layout_title">Keyboard layout</string>
        <string name="pref_input_style_title">Input style</string>
        <string name="pref_qwerty_layout_for_alphabet_title">QWERTY mode</string>
        <string name="pref_flick_sensitivity_title">Flick sensitivity</string>
        <string name="pref_use_portrait_keyboard_settings_for_landscape_title">Use portrait settings</string>
        <string name="pref_keyboard_height_ratio_title">Keyboard height</string>
    <string name="pref_input_feedback_category_title">Input feedback preferences</string>
        <string name="pref_haptic_feedback_title">Haptic feedback</string>
        <string name="pref_haptic_feedback_duration_title">Haptic feedback duration</string>
        <string name="pref_sound_feedback_title">Audio feedback</string>
        <string name="pref_sound_feedback_volume_title">Audio feedback volume</string>
        <string name="pref_popup_feedback_title">Popup feedback</string>
    <string name="pref_other_input_support_preference_category_title">Other input support preferences</string>
        <string name="pref_fullscreen_title">Fullscreen mode</string>
        <string name="pref_skin_type_title">Keyboard theme</string>
        <string name="pref_hardware_title">Preferences for hardware keyboards</string>
        <string name="pref_voice_input_title">Show voice input button</string>
    <string name="pref_conversion_category_title">Conversion preferences</string>
        <string name="pref_layout_adjustment_title">Layout adjustment</string>
        <string name="pref_space_character_form_title">Use half-width space</string>
        <string name="pref_kana_modifier_insensitive_conversion_title">Modifier insensitive conversion</string>
        <string name="pref_typing_correction_title">Typing correction</string>
        <string name="pref_other_incognito_mode_title">Incognito mode</string>
        <string name="pref_emoji_provider_type_title">Select Emoji provider</string>
    <string name="pref_dictionry_category_title">Dictionary preferences</string>
        <string name="pref_dictionary_personalization_title">Personalization</string>
        <string name="pref_dictionary_user_dictionary_tool_title">Dictionary Tool</string>
        <string name="pref_clear_category_title">Clear history</string>
            <string name="pref_clear_conversion_history_title">Conversion history</string>
            <string name="pref_clear_symbol_history_title">Symbol history</string>
            <string name="pref_clear_user_dictionary_title">User dictionary</string>
    <string name="pref_user_feedback_category_title">User feedback</string>
      <string name="pref_other_usage_stats_title">Send usage statistics</string>
    <string name="pref_about_about_this_software_title">About this software</string>
        <string name="pref_about_version_title">Version</string>
        <string name="pref_about_oss_credits_title">Open source software</string>
        <string name="pref_launcher_icon_visibility_title">Show app icon</string>
        <string name="pref_haptic_feedback_description">Vibrate on key press.</string>
        <string name="pref_sound_feedback_description">Sound on key press.</string>
        <string name="pref_popup_feedback_description">Popup on key press.</string>
        <string name="pref_keyboard_layout_description">Switch keyboard layout.</string>
            <string name="pref_keyboard_layout_title_12keys">12 keys</string>
            <string name="pref_keyboard_layout_title_qwerty">QWERTY</string>
            <string name="pref_keyboard_layout_title_godan">Godan Keyboard</string>
            <string name="pref_keyboard_layout_description_12keys">Mobile phone layout.</string>
            <string name="pref_keyboard_layout_description_qwerty">PC keyboard layout.</string>
            <string name="pref_keyboard_layout_description_godan">Romaji-dedicated layout. <![CDATA[<a href=\'http://support.google.com/ime/japanese/bin/answer.py?hl=ja&topic=25606&answer=2700298\'>Usage</a>]]></string>
        <string name="pref_input_style_setting_description">Select input style.</string>
        <string name="pref_qwerty_layout_for_alphabet_description">If checked, QWERTY layout will be used for alphabet input mode regardless of main layout.</string>
        <string name="pref_fullscreen_description">If checked, target textbox shows in fullscreen mode.</string>
        <string name="pref_flick_sensitivity_description">Tune the flick sensitivity.</string>
        <string name="pref_layout_adjustment_description">Switch keyboard adjustment.</string>
        <string name="pref_keyboard_height_ratio_description">Change the keyboard height.</string>
        <string name="pref_space_character_form_description">Always use half-width space, no matter the input mode.</string>
        <string name="pref_kana_modifier_insensitive_conversion_description">Use kana modifier insensitive conversion. Applied to 12 keys and Godan keyboard. e.g. かつこう→学校</string>
        <string name="pref_typing_correction_description">Detect mistyping and show corrected candidates. e.g. すんかい→深海</string>
        <string name="pref_emoji_provider_type_description">Select the Emoji provider properly to use emoji.</string>
        <string name="pref_skin_type_description">Select the keyboard theme to customize the software keyboard look.</string>
        <string name="pref_voice_input_description">Show voice input button on the software keyboard.</string>
        <string name="pref_hardware_keymap_description">Select key mapping for hardware keyboards.</string>
        <string name="pref_dictionary_personalization_description">Enable personal suggestions based on past input.</string>
        <string name="pref_dictionary_user_dictionary_tool_description">Edit user dictionaries.</string>
        <string name="pref_clear_category_description">Clear personalization or suggestion data.</string>
            <string name="pref_clear_conversion_history_description">Clear conversion history.</string>
            <string name="pref_clear_symbol_history_description">Clear symbol input history.</string>
            <string name="pref_clear_user_dictionary_description">Clear user dictionary.</string>
        <string name="pref_other_incognito_mode_description">Temporarily disable personalization, suggestions and user dictionary.</string>
        <string name="pref_other_usage_stats_description">Send usage statistics to %1$s. These will only be used to improve %1$s products and services.</string>
        <string name="pref_about_oss_credits_description">This software uses open source software: view the licenses.</string>
        <string name="pref_launcher_icon_visibility_description">Display application icon in the launcher</string>
    <string name="pref_input_style_setting_entry_toggle">Toggle</string>
    <string name="pref_input_style_setting_entry_flick">Flick</string>
    <string name="pref_input_style_setting_entry_toggle_and_flick">Toggle &amp; Flick</string>
    <string name="pref_fullscreen_portrait">Enable on portrait</string>
    <string name="pref_fullscreen_landscape">Enable on landscape</string>
    <string name="pref_emoji_provider_type_unicode">Disable carrier Emoji</string>
    <string name="pref_emoji_provider_type_docomo">NTT docomo</string>
    <string name="pref_emoji_provider_type_kddi">KDDI (au)</string>
    <string name="pref_emoji_provider_type_softbank">SoftBank</string>
    <string name="pref_skin_type_orange_lightgray">Orange/Light-gray</string>
    <string name="pref_skin_type_blue_lightgray">Blue/Light-gray</string>
    <string name="pref_skin_type_blue_darkgray">Blue/Dark-gray</string>
    <string name="pref_skin_type_material_design_light">Material Design (Light)</string>
    <string name="pref_skin_type_material_design_dark">Material Design (Dark)</string>
    <string name="pref_hardware_keymap_default">System Default</string>
    <string name="pref_hardware_keymap_japanese109A">Japanese 109A</string>
    <string name="pref_hardware_keymap_twelvekey">12 keys</string>
    <string name="pref_dictionary_personalization_entry_enabled">Enable</string>
    <string name="pref_dictionary_personalization_entry_readonly">Frozen</string>
    <string name="pref_dictionary_personalization_entry_disabled">Disable</string>
    <string name="pref_layout_adjustment_entry_fill">Fill</string>
    <string name="pref_layout_adjustment_entry_right">Right</string>
    <string name="pref_layout_adjustment_entry_left">Left</string>
    <string name="pref_ime_enable_alert_title">Setup for text settings</string>
    <string name="pref_ime_enable_alert_message">Please enable %s.</string>
    <string name="pref_ime_switch_alert_title">Setup for input method</string>
    <string name="pref_ime_switch_alert_message">Please change the input method to %s.</string>
    <string name="pref_ime_alert_next">Next</string>
    <string name="pref_ime_alert_cancel">Cancel</string>
    <string name="pref_flick_sensitivity_seekbar_low_text">Low</string>
    <string name="pref_flick_sensitivity_seekbar_middle_text">Mid</string>
    <string name="pref_flick_sensitivity_seekbar_high_text">High</string>
    <string name="pref_haptic_feedback_duration_low_text">Short</string>
    <string name="pref_haptic_feedback_duration_high_text">Long</string>
    <string name="pref_sound_feedback_volume_low_text">Min</string>
    <string name="pref_sound_feedback_volume_middle_text">Mid</string>
    <string name="pref_sound_feedback_volume_high_text">Max</string>
    <string name="symbol_input_no_history">No history.\n\nSwipe the screen\nto browse categories.</string>
    <string name="symbol_emoji_disabled_message">This text field does not support Emoji input.</string>
    <string name="menu_dialog_title">Input options</string>
    <string name="menu_item_input_method">Select input method</string>
    <string name="menu_item_preferences">%s settings</string>
    <string name="menu_item_mushroom">Launch Mushroom</string>
    <string name="user_dictionary_tool_app_name">Dictionary tool</string>
      <string name="user_dictionary_tool_menu_add_entry_title">New word</string>
      <string name="user_dictionary_tool_menu_delete_entry_title">Delete word</string>
      <string name="user_dictionary_tool_menu_undo_title">Undo</string>
      <string name="user_dictionary_tool_menu_create_dictionary_title">New dictionary</string>
      <string name="user_dictionary_tool_menu_rename_dictionary_title">Rename current dictionary</string>
      <string name="user_dictionary_tool_menu_delete_dictionary_title">Delete current dictionary</string>
      <string name="user_dictionary_tool_menu_export_dictionary_title">Export current dictionary</string>
      <string name="user_dictionary_tool_default_dictionary_name">User Dictionary 1</string>
</resources>